--- a/src/assets/scss/blocks/popups/popups-wrap.scss
+++ b/src/assets/scss/blocks/popups/popups-wrap.scss
@@ -31,6 +31,16 @@
   }
 }
 
+.page[data-state='not-overlay-popup'] {
+  .popups-wrap {
+    display: flex;
+
+    &__bg-close {
+      background-color: $transparent-color;
+    }
+  }
+}
+
 .page[data-state='show-popup'] {
   overflow: hidden;
 
