--- a/src/pug/includes/modules/content/reviews-block.pug
+++ b/src/pug/includes/modules/content/reviews-block.pug
@@ -26,4 +26,4 @@ section.reviews-block
       - var linkColorClass = 'link_primary'
         if ((locals.data.pageData.theme === 'main') || (locals.data.pageData.theme === '1'))
           - linkColorClass = 'link_secondary'
-      a.reviews-block__link.link.link_arrow.underline(class=linkColorClass href='/reviews.html') Читать все отзывы или оставить свой
+      a.reviews-block__link.link.link_arrow.underline(class=linkColorClass href='reviews.html') Читать все отзывы или оставить свой
