--- a/src/pug/includes/modules/content/video-reviews.pug
+++ b/src/pug/includes/modules/content/video-reviews.pug
@@ -65,4 +65,4 @@ section.video-reviews
         - videoClass = `${videoClass} hidden_mobile-tablet`
       +video(video, videoClass)(width='320' height='180' poster=video.poster data-id=video.id)
     .video-reviews__link
-      a.link.link_arrow.link_secondary.underline(href='/video-reviews.html') Все видеоотзывы
+      a.link.link_arrow.link_secondary.underline(href='video-reviews.html') Все видеоотзывы
