--- a/src/pug/includes/modules/footer/footer.pug
+++ b/src/pug/includes/modules/footer/footer.pug
@@ -19,10 +19,11 @@
 footer.page-footer
   .page-footer__content.container
     p.page-footer__copyright
-      | Любое использование либо копирование материалов или подборки материалов сайта, элементов дизайна и оформления
-      | допускается лишь с разрешения правообладателя и только со ссылкой на источник: https://expert-massage-clinic.ru
+      | Любое использование либо копирование материалов или&nbsp;подборки материалов сайта, элементов дизайна и оформления
+      | допускается лишь с разрешения правообладателя и только со&nbsp;ссылкой на источник: https://expert-massage-clinic.ru.
+      | Вся представленная на сайте информация не является публичной офертой
     .page-footer__company
-      a(href='/')
+      a(href='index.html')
         +picture-tag(footerLogo, footerLogo.mobile.jpg['3x'], 'Клиника профессионального массажа Expert', '125', '26').page-footer__logo
       p.page-footer__company-text= `Массаж в Москве ${locals.data.globalData.company.foundationYear}-${locals.data.globalData.currentYear}`
     .page-footer__socials
