--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -80,7 +80,7 @@ block content
     .container.about-page__content
       .section.about-page__history
         h1.about-page__title.heading О нас
-        p.about-page__description!= `Клиника профессионального массажа «Эксперт» открыта в&nbsp;${globalData.company.foundationYear} году. И&nbsp;уже ${globalData.company.businessDuration}&nbsp;лет мы помогаем клиентам с&nbsp;заболеваниями позвоночника, общими проблемами со&nbsp;здоровьем, и&nbsp;сложными эстетическими проблемами. Мы лечим массажем, потому что&nbsp;это самый эффективный и&nbsp;безопасный способ омолодить лицо, улучшить фигуру, и&nbsp;избавиться от&nbsp;боли и&nbsp;зажимов в&nbsp;любой части тела.`
+        p.about-page__description!= `Клиника профессионального массажа «Эксперт» берёт свое начало с&nbsp;${globalData.company.foundationYear}&nbsp;года. И&nbsp;уже ${globalData.company.businessDuration}&nbsp;лет мы помогаем клиентам с&nbsp;заболеваниями позвоночника, общими проблемами со&nbsp;здоровьем, и&nbsp;сложными эстетическими проблемами. Мы лечим массажем, потому что&nbsp;это самый эффективный и&nbsp;безопасный способ омолодить лицо, улучшить фигуру, и&nbsp;избавиться от&nbsp;боли и&nbsp;зажимов в&nbsp;любой части тела.`
         figure.about-page__blockquote.blockquote-card
           blockquote.blockquote-card__wrap
             p.blockquote-card__text
