--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -14,14 +14,14 @@ block variables
       theme: '9',
       massage: globalData.massages['anti-cellulite-massage'],
       mainScreenHeading: 'Антицеллюлитный массаж',
-      mainScreenSubheading: `Избавляет от&nbsp;целлюлита, разглаживает кожу. Подтягивает ягодицы, уменьшает «ушки»
+      mainScreenSubheading: `Избавляет от&nbsp;целлюлита, разглаживает кожу. Подтягивает бёдра и ягодицы, уменьшает «ушки»
         и&nbsp;бока`,
       mainScreenFeatures: globalData.company.features,
       aboutMassage: [
         {
           title: 'Какой будет эффект? Целлюлит пропадёт полностью?',
           text: [
-            'Эффект очень заметный, кожа становится упругой, разглаживается, уменьшаются объёмы, фигура становится красивее. Если ваш целлюлит не очень сильно выражен, он пропадёт совсем.',
+            'Эффект очень заметный, кожа становится упругой, разглаживается, уменьшаются объёмы бёдер и ягодиц, фигура становится красивее. Если ваш целлюлит не очень сильно выражен, он пропадёт совсем.',
             'Но даже если у вас целлюлит последней стадии, за курс мы уменьшим его в разы, вы сможете носить короткие платья и не переживать за качество кожи.',
             'На процедуре мы расскажем вам, что делать, чтобы усилить эффект. Но даже без соблюдения рекомендаций после курса вы не узнаете свою кожу. '
           ]
@@ -45,7 +45,7 @@ block variables
       massageResults: {
         title: 'Результаты антицеллюлитного массажа',
         figure: {
-          slidesOrder: [1, 9, 10, 11, 12, 3, 4, 5, 6, 7, 8]
+          slidesOrder: [11, 9, 10, 12, 3, 4, 5, 6, 7, 8]
         }
       },
       reviewsBlock: {
@@ -130,7 +130,6 @@ block variables
         `Сначала мастер тщательно подготовит вашу кожу к процедуре. Он разогреет её мягкими поглаживаниями с согревающим маслом, обеспечит приток крови, и только после этого перейдёт к глубоким воздействиям.<br>
           <br>
           Такой аккуратный подход позволяет провести процедуру эффективно и безболезненно, а также избежать синяков и сосудистых звёздочек`,
-        `По желанию клиента специалист сделает обёртывание проблемных зон. Мы хотим, чтобы результат вас удивил и порадовал, и если видим, что обёртывание явно показано, предложим его сами, бесплатно`,
         `Ручной антицеллюлитный массаж — самое эффективное средство, чтобы разгладить и подтянуть кожу, убрать все признаки целлюлита. Никакие аппараты, домашние скрабы и процедуры не сравнятся с руками профессионального массажиста, который промнёт и глубоко проработает все ваши ткани.<br>
           <br>
           Благодаря эффективности такого массажа, результат всего за один курс потрясает, он сравним с несколькими месяцами тренировок, ограничений в питании и домашних процедур`
