--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -144,7 +144,8 @@ block variables
           answer: `Главное отличие хиромассажа от других массажей лица в том, что он направлен не только на физическое, но и на психоэмоциональное состояние человека. После процедуры наши клиенты чувствуют, что их настроение заметно улучшилось, стало больше сил и энергии. В какой-то степени это относится ко всем расслабляющим массажам, но к хиромассажу особенно. При этом хиромассаж прекрасно справляется и со своей основной задачей – омолодить и подтянуть лицо.`
         },
         locals.data.globalData.commonFaceFaq[2],
-        locals.data.globalData.commonFaceFaq[3]
+        locals.data.globalData.commonFaceFaq[3],
+        locals.data.globalData.commonFaceFaq[4]
       ],
       priceList: {
         showPromo: true
