--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -27,7 +27,7 @@ block variables
         {
           title: 'Какой будет результат?',
           text: [
-            'Массажист снимет с каждой мышцы лица спазм и усталость, и это сразу отразится на качестве кожи. Уменьшится выраженность морщин, возрастные недос&shy;татки станут менее заметны.',
+            'Массажист снимет с мышц спазм и усталость, и это сразу отразится на качестве кожи. Уменьшится выраженность морщин, возрастные недос&shy;татки станут менее заметны.',
             'Благодаря притоку крови, улучшится цвет лица, клетки насытятся кисло&shy;родом, кожа станет более упругой. Однако, достичь сильного лифтинг-эффекта с помощью классичес&shy;кой техники, довольно трудно.'
           ]
         },
@@ -139,7 +139,8 @@ block variables
           answer: `Классический массаж — это одна из самых мягких техник, очень плавная и расслабляющая. Это давно разработанная и проверенная методика, где работа идёт только по массажным линиям. За счёт этого классический массаж не может так разительно изменить внешность, как например скульптурно-буккальный массаж. Но он прекрасно подойдёт, чтобы расслабить мышцы и улучшить тонус кожи.`
         },
         locals.data.globalData.commonFaceFaq[2],
-        locals.data.globalData.commonFaceFaq[3]
+        locals.data.globalData.commonFaceFaq[3],
+        locals.data.globalData.commonFaceFaq[4]
       ],
       priceList: {
         showPromo: true
