--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -34,7 +34,7 @@ block variables
             title: 'Работаем так, чтобы нас хотелось советовать близким',
             text: `Нам важно, чтобы вы были довольны, и&nbsp;у&nbsp;нас неплохо получается: почти 70% клиентов приходят
               по&nbsp;совету друзей. Многие ходят к&nbsp;нам семьями. Почитайте
-              <a class="link link_secondary underline" href="/reviews.html">отзывы</a>, чтобы узнать о&nbsp;нас побольше`
+              <a class='link link_secondary underline' href='reviews.html'>отзывы</a>, чтобы узнать о&nbsp;нас побольше`
           },
           {
             title: 'Гарантируем безопасность, результат и&nbsp;честность. Для нас важно помочь',
