--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -146,7 +146,8 @@ block variables
           answer: `Чем этот массаж лица отличается от других массажей? Массаж Асахи-Зоган интенсивнее других массажей лица, кроме скульптурно-буккального, и может не подойти тем, кто привык к нежным воздействиям. При этом японский массаж полностью безопасен и очень эффективен. Если вы хотите сделать скулы заметнее и улучшить овал лица, но не можете посещать скульптурно-буккальный массаж, вам отлично подойдёт массаж Асахи-Зоган.`
         },
         locals.data.globalData.commonFaceFaq[2],
-        locals.data.globalData.commonFaceFaq[3]
+        locals.data.globalData.commonFaceFaq[3],
+        locals.data.globalData.commonFaceFaq[4]
       ],
       priceList: {
         showPromo: true
