--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -20,8 +20,8 @@ block variables
         {
           title: 'Что это за процедура?',
           text: [
-            'Массаж шейно-воротниковой зоны — это 15-минутный сеанс массажа, направлен&shy;ный на&nbsp;расслабление шейного отдела, снятие воспалений и зажимов, и восстановление подвижности шеи.',
-            'Лучше всего этот сеанс подойдёт тем, у кого нет заболеваний, но есть риски — например, сидячая работа. Из-за небольшой продолжительности и локаль&shy;ного воздействия, этот массаж считается профилактическим.',
+            'Массаж шейно-воротниковой зоны — это 30-минутный сеанс массажа, направлен&shy;ный на&nbsp;расслабление шейного отдела, снятие воспалений и зажимов, и восстановление подвижности шеи.',
+            'Лучше всего этот сеанс подойдёт тем, у кого нет заболеваний, но есть риски — например, сидячая работа. Из-за локального воздействия и&nbsp;небольшой продолжительности, этот массаж считается профилактическим.',
             `При проблемах, например неодно&shy;кратной боли в шее, стоит заняться позвоноч&shy;ником целиком, на сеансе <a class='link link_primary' href='back-massage.html'>лечебного массажа спины</a>.`
           ]
         },
@@ -98,7 +98,7 @@ block variables
         poster: 'assets/img/massage-video/massage-video-poster_all.jpg',
         sticker: {
           position: 'left',
-          text: 'Сеанс идёт 15 минут и больше подходит для профилактики'
+          text: 'Сеанс идёт 30 минут и больше подходит для профилактики'
         }
       },
       featuresBlock: {
