--- a/src/pug/pages/reviews.pug
+++ b/src/pug/pages/reviews.pug
@@ -116,7 +116,7 @@ block content
       p.reviews-page__text Если вы уже были на наших сеансах, но ещё не оставили отзыв, подели&shy;тесь, пожалуйста, вашими впечатле&shy;ниями, ощущениями и результатом. Возможно, именно ваши слова помогут другим людям, которые только начали искать себе мас&shy;сажиста, сделать правильный выбор.
       section.reviews-page__form.review-form
         h2.reviews-page__subtitle Оставьте отзыв
-        form.review-form__form(action='#' method='post')
+        form.review-form__form(action='/' method='post')
           +text-input('Ваше имя*', true, 'review-form__input text-input_fill')#reviewerName
           +text-input('Email', true, 'review-form__input text-input_fill')#reviewerEmail
           .review-form__textarea
