--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -31,9 +31,11 @@ block variables
           ]
         },
         {
-          title: 'Это больно, долго, дорого?',
+          title: 'Это больно, долго, дорого? Не появятся ли прыщи?',
           text: [
-            'Процедура массажа приятная и расслабляющая, некоторые засыпают. Если у вас очень забитые мышцы, будет чувстви&shy;тельно, но точно не больно. Для устойчивого результата обычно хватает 6-10 процедур, но разницу видно и после первой. А стоимость в разы меньше, чем при попытках добиться похожего результата пластикой.'
+            'Процедура массажа приятная и&nbsp;рас&shy;слаб&shy;ля&shy;ющая, но&nbsp;ес&shy;&shy;ли у&nbsp;вас очень за&shy;&shy;жа&shy;&shy;тые мыш&shy;&shy;цы, мес&shy;&shy;тами может быть по&shy;&shy;вы&shy;&shy;шен&shy;&shy;ная чувстви&shy;тель&shy;&shy;ность. Это сиг&shy;нал, что в&nbsp;тканях есть глу&shy;бокая проб&shy;лема, и&nbsp;по ме&shy;ре сня&shy;тия спаз&shy;ма вы заме&shy;тите, что&nbsp;чувстви&shy;тель&shy;ность ушла.',
+            'Для устой&shy;чи&shy;во&shy;го ре&shy;зуль&shy;та&shy;та обыч&shy;но хва&shy;тает 6-10 про&shy;це&shy;дур, но&nbsp;раз&shy;ни&shy;цу вид&shy;но и&nbsp;пос&shy;ле пер&shy;вой. А&nbsp;стоимость в&nbsp;ра&shy;зы мень&shy;ше, чем при&nbsp;по&shy;пыт&shy;ках до&shy;бить&shy;ся по&shy;хо&shy;же&shy;го ре&shy;зуль&shy;та&shy;та плас&shy;ти&shy;кой.',
+            'Прыщи не появят&shy;&shy;ся&nbsp;— на&shy;&shy;ши мас&shy;&shy;те&shy;&shy;ра соб&shy;&shy;лю&shy;&shy;да&shy;&shy;ют стро&shy;&shy;жай&shy;&shy;ший анти&shy;&shy;сеп&shy;&shy;тичес&shy;&shy;кий про&shy;&shy;то&shy;&shy;кол, поч&shy;&shy;ти как в хи&shy;&shy;рур&shy;&shy;гии. Мас&shy;&shy;тер тща&shy;&shy;тель&shy;&shy;но об&shy;&shy;ра&shy;&shy;бо&shy;&shy;та&shy;&shy;ет вам ли&shy;&shy;цо, на&shy;&shy;де&shy;&shy;нет сте&shy;&shy;риль&shy;&shy;ные пер&shy;&shy;чат&shy;&shy;ки, а пос&shy;&shy;ле мас&shy;&shy;сажа сно&shy;&shy;ва об&shy;&shy;ра&shy;&shy;бо&shy;&shy;та&shy;&shy;ет вам ко&shy;&shy;жу, что&shy;&shy;бы очис&shy;&shy;тить и успо&shy;&shy;коить её. Мы ра&shy;&shy;бо&shy;&shy;та&shy;&shy;ем толь&shy;&shy;ко по тем сред&shy;ствам, ко&shy;то&shy;рые не про&shy;во&shy;ци&shy;руют пры&shy;щи, ко&shy;ме&shy;до&shy;ны и чёр&shy;ные точки.'
           ]
         }
       ],
@@ -101,7 +103,7 @@ block variables
         poster: 'assets/img/massage-video/massage-video-poster_face.jpg',
         sticker: {
           position: 'right',
-          text: 'Процедура абсолютно безболезненна'
+          text: 'Процедура абсолютно безопасна'
         }
       },
       featuresBlock: {
@@ -138,17 +140,21 @@ block variables
       ],
       faq: [
         locals.data.globalData.commonFaceFaq[0],
-        locals.data.globalData.commonFaceFaq[1],
+        {
+          question: `Это не больно? Какие ощущения при процедуре?`,
+          answer: `Обычно нет, массаж лица это приятная процедура. Но если какая-то мышца у вас сильно спазмирована, то несмотря на аккуратную работу специалиста, может быть чувствительно. Не настраивайтесь на неприятные ощущения, если они и будут, то вполне терпимые, и не на всём лице. А по мере снятия спазма чувствительность полностью пропадёт. В большинстве же случаев процедура доставляет клиентам только удовольствие.`
+        },
         {
           question: `Чем скульптурно-буккальный массаж лучше пластики?`,
-          answer: `Если кратко, то всем. Массаж совершенно не травматичен, и практически не имеет противопоказаний. Его можно делать в любом возрасте и с любым строением лица. Хирургические вмешательства бывают неудачными, а люди после операций часто похожи друг на друга. Подправленное лицо нужно постоянно поддерживать, а если перестать это делать, лицо станет выглядеть гораздо хуже, чем если бы вы не вмешивались в него. Массажем невозможно испортить черты лица — ваше преображение будет естественным, вы станете лучшей версией себя и сохраните результат на всю жизнь, если будете его поддерживать. А если не будете — никакого ужасного отката не случится, будет медленный и обратимый возврат, не критичный. И всё это без инъекций, боли и осложнений.`
+          answer: `Если кратко, то всем. Массаж совершенно не травматичен, и практически не имеет противопоказаний. Его можно делать в любом возрасте и с любым строением лица. Хирургические вмешательства бывают неудачными, а люди после операций часто похожи друг на друга. Подправленное лицо нужно постоянно поддерживать, а если перестать это делать, лицо станет выглядеть гораздо хуже, чем если бы вы не вмешивались в него. Массажем невозможно испортить черты лица&nbsp;— ваше преображение будет естественным, вы станете лучшей версией себя и сохраните результат на всю жизнь, если будете его поддерживать. А если не будете&nbsp;— никакого ужасного отката не случится, будет медленный и обратимый возврат, не критичный. И всё это без инъекций, боли и осложнений.`
         },
         {
           question: `В чём отличие этого массажа от&nbsp;других массажей лица?`,
           answer: `Скульптурно-буккальный массаж — это очень эффективная методика, и результаты от этого массажа, пожалуй, самые яркие. Все массажи лица в нашей клинике дают отличный результат, но скульптурный массаж может сравниться лишь с пластикой лица. После курса массажа уходят не только такие очевидные недостатки как морщины, в лучшую сторону меняются даже черты лица. Этот эффект достигается тем, что мышцы прорабатываются не только с внешней стороны, но и с внутренней — через рот. В этом главная особенность скульптурно-буккального массажа.`
         },
         locals.data.globalData.commonFaceFaq[2],
-        locals.data.globalData.commonFaceFaq[3]
+        locals.data.globalData.commonFaceFaq[3],
+        locals.data.globalData.commonFaceFaq[4]
       ],
       priceList: {
         showPromo: true
