--- a/src/assets/scss/blocks/header/main-screen.scss
+++ b/src/assets/scss/blocks/header/main-screen.scss
@@ -82,7 +82,7 @@
 
   &__feature-text {
     font-size: 1.6rem;
-    line-height: 1.25;
+    line-height: 1.3;
   }
 
   &__feature-rating {
@@ -90,17 +90,12 @@
     justify-content: center;
     align-items: center;
 
-    span {
-      line-height: 1.2;
-    }
-
-    .rating-block__number {
-      font-size: 3.2rem;
-    }
-
-    .rating-block__yandex-logo {
-      margin-right: 0.8rem;
+    .rating-block__star-icon {
       margin-left: 0.4rem;
+
+      @include themify() {
+        fill: $color-primary;
+      }
     }
   }
 }
