--- a/src/pug/includes/modules/content/massage-results/back.pug
+++ b/src/pug/includes/modules/content/massage-results/back.pug
@@ -84,8 +84,9 @@ if (locals.data.pageData.theme === 'main') || (locals.data.pageData.theme === '1
             +picture-tag(backResultPhotos[3], backResultPhotos[3].mobile.jpg['1x'], 'Результаты лечебного массажа спины')
           .back-results__slide
             +picture-tag(backResultPhotos[4], backResultPhotos[4].mobile.jpg['1x'], 'Результаты лечебного массажа спины')
-        .back-results__slide
-          +picture-tag(backResultPhotos[0], backResultPhotos[0].mobile.jpg['1x'], 'Снимки МРТ до и после курса лечебного массажа')
-        .back-results__slide
-          +picture-tag(backResultPhotos[1], backResultPhotos[1].mobile.jpg['1x'], 'Снимки МРТ до и после курса лечебного массажа')
+        .back-results__slides-group
+          .back-results__slide
+            +picture-tag(backResultPhotos[0], backResultPhotos[0].mobile.jpg['1x'], 'Снимки МРТ до и после курса лечебного массажа')
+          .back-results__slide
+            +picture-tag(backResultPhotos[1], backResultPhotos[1].mobile.jpg['1x'], 'Снимки МРТ до и после курса лечебного массажа')
       button.slider__button.slider__button_next.hidden_desktop-tablet(aria-label="Следующий слайд")
