--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -137,7 +137,8 @@ block variables
           answer: `Лимфодренажный массаж лица предназначен для борьбы с отёками на лице. Он поможет, если вы встаёте утром с опухшим лицом и вам требуется время, чтобы прийти в норму.  Также, за счёт вывода лишней воды, после массажа ярче проявятся черты лица, и оно будет выглядеть естественнее. Но если вы склонны к отёкам не только на лице, но и на теле, мы рекомендуем делать лимфодренажный массаж всего тела, так как он отлично справляется и с отёчностью лица.`
         },
         locals.data.globalData.commonFaceFaq[2],
-        locals.data.globalData.commonFaceFaq[3]
+        locals.data.globalData.commonFaceFaq[3],
+        locals.data.globalData.commonFaceFaq[4]
       ],
       priceList: {
         showPromo: true
