--- a/src/pug/utils/global-data.pug
+++ b/src/pug/utils/global-data.pug
@@ -98,7 +98,7 @@
           first: 800,
           standard: 800
         },
-        duration: 15,
+        duration: 30,
         shortDescription: ''
       },
       'sculptural-buccal-massage': {
@@ -375,13 +375,11 @@
     },
     {
       bigText: '800',
-      smallText: `честных <a class='link link_primary underline' href='reviews.html'>отзывов</a><br>с
-        ${locals.data.globalData.company.foundationYear} по ${locals.data.globalData.currentYear}
+      smallText: `честных <a class='link link_primary underline' href='reviews.html'>отзывов</a>
+        с&nbsp;${locals.data.globalData.company.foundationYear}&nbsp;по&nbsp;${locals.data.globalData.currentYear}
         <span class='main-screen__feature-rating'>
-          <span>Рейтинг</span>
-          <img class='rating-block__yandex-logo' src='assets/img/reviews-block/yandex-logo.svg' alt='Яндекс' width='41' height='15'>
-          <b class='rating-block__number' aria-hidden='true'>5</b>
-          <svg class='rating-block__star-icon' width='25' height='25' aria-label='5 звёзд'>
+          <span>рейтинг&nbsp;в&nbsp;Яндекс&nbsp;<span aria-hidden='true'>5</span></span>
+          <svg class='rating-block__star-icon' width='20' height='20' aria-label='5 звёзд'>
             <use xlink:href='#star-icon'></use>
           </svg>
         </span>`
@@ -511,7 +509,7 @@
     {
       question: `Как именно помогает массаж?<br>
         За счёт чего подтягиваются мышцы?`,
-      answer: `Всё довольно просто – когда массажист работает с мышечным каркасом лица и шеи, улучшается кровообращение, цвет лица и состояние кожи. Массажист снимает спазм мышц, возвращает им правильное положение.<br><br>Все основные эстетические проблемы лица — из-за спазмированных мышц. Поэтому результат массажа проявляется так быстро, и остаётся стабильным при периодической поддержке. Глубокое воздействие, которое мы делаем в клинике, приводит к очень стойкому результату, так как восстана&shy;вливается правильное положение костей, мышц, фасций и сосудов. За счёт этого уходят морщины, отёки, зажимы, ассимет&shy;рии лица. И это — ваше настоящее лицо, а не искусственно созданное пластикой. Вы не теряете свой облик, уникальность и естественность, вы только улучшаете их, к тому же всё это полностью безопасно`
+      answer: `Всё довольно просто&nbsp;— когда массажист работает с мышечным каркасом лица и шеи, улучшается кровообращение, цвет лица и состояние кожи. Массажист снимает спазм мышц, возвращает им правильное положение.<br><br>Все основные эстетические проблемы лица&nbsp;— из-за спазмированных мышц. Поэтому результат массажа проявляется так быстро, и остаётся стабильным при периодической поддержке. Глубокое воздействие, которое мы делаем в клинике, приводит к очень стойкому результату, так как восстана&shy;вливается правильное положение костей, мышц, фасций и сосудов. За счёт этого уходят морщины, отёки, зажимы, ассимет&shy;рии лица. И это&nbsp;— ваше настоящее лицо, а не искусственно созданное пластикой. Вы не теряете свой облик, уникальность и естественность, вы только улучшаете их, к тому же всё это полностью безопасно`
     },
     {
       question: `Это не больно? Какие ощущения при&nbsp;процедуре?`,
@@ -520,11 +518,17 @@
     {
       question: `Как поддерживать результат?<br>
         Если перестану, всё разъедется?`,
-      answer: `Будет замечательно, если вы сможете приходить на поддерживающие сеансы 1-2 раза в месяц, либо курсом 1-2 раза в год. Это может показаться сложным, но такой подход поможет вам сохранить результат на долгие годы — лицо будет оставаться упругим, молодым и подтянутым. Но даже если вы решите не продолжать сеансы, лицо будет ещё долго радовать вас отличным тонусом. А дальше результат потихоньку будет становиться не таким ярким, но ничего ужасного не произойдёт. Полного отката назад не случится, лицо не станет выглядеть хуже, чем до массажа, и резкого обвисания тканей тоже не будет. Массаж, в отличие от пластики, полностью исключает такие последствия.`
+      answer: `Будет замечательно, если вы сможете приходить на поддерживающие сеансы 1-2 раза в месяц, либо курсом 1-2 раза в год. Это может показаться сложным, но такой подход поможет вам сохранить результат на долгие годы&nbsp;— лицо будет оставаться упругим, молодым и подтянутым. Но даже если вы решите не продолжать сеансы, лицо будет ещё долго радовать вас отличным тонусом. А дальше результат потихоньку будет становиться не таким ярким, но ничего ужасного не произойдёт. Полного отката назад не случится, лицо не станет выглядеть хуже, чем до массажа, и резкого обвисания тканей тоже не будет. Массаж, в отличие от пластики, полностью исключает такие последствия.`
+    },
+    {
+      question: `Можно ли делать массаж с филлерами, нитями, ботоксом и т.д?`,
+      answer: `Краткий ответ&nbsp;— да, но нужно быть готовым, что филлеры будут рассасываться быстрее.<br>
+        <br>
+        На результаты ботокса и нитей массаж не повлияет, главное переждать восстановительный период после процедуры. Время восстановления после процедуры ботокса составит 1-2 месяца, после нитей 3-6 недель, а после филлеров&nbsp;— до 2 месяцев. Со временем курсы массажа вполне могут заменить вам все инъекционные и хирургические процедуры.`
     },
     {
       question: `А кожа не растянется при таком воздействии?`,
-      answer: `Нет, не растянется — при правильной технике невозможно растянуть кожу массажем. Специалисты в нашей клинике работают только по лучшим мировым методикам, они уверены в каждом своём движении, и точно знают, как принести вашей внешности только пользу. Кожа после массажа станет только лучше, она будет упругой, подтянутой и свежей.`
+      answer: `Нет, не растянется&nbsp;— при правильной технике невозможно растянуть кожу массажем. Специалисты в нашей клинике работают только по лучшим мировым методикам, они уверены в каждом своём движении, и точно знают, как принести вашей внешности только пользу. Кожа после массажа станет только лучше, она будет упругой, подтянутой и свежей.`
     }
   ]
 -
@@ -557,21 +561,21 @@
       url: 'massage-oil.html',
       title: 'Массажное масло',
       textPreview: `Тактильный контакт рук мастера с&nbsp;кожными покровами пациента становится более комфортным,
-              если во&nbsp;время проведения сеанса массажное масло наносится на&nbsp;тело...`
+        если во&nbsp;время проведения сеанса массажное масло наносится на&nbsp;тело...`
     },
     3: {
       id: 3,
       url: 'about-massage.html',
       title: 'Про массаж',
       textPreview: `Массаж&nbsp;— это физиотерапевтическая процедура, которая заключается в&nbsp;меха&shy;ническом
-              воздействии на&nbsp;организм через кожу. В&nbsp;массаж входят основные приемы, такие как поглаживание...`
+        воздействии на&nbsp;организм через кожу. В&nbsp;массаж входят основные приемы, такие как поглаживание...`
     },
     4: {
       id: 4,
       url: 'massage-pros-and-cons.html',
       title: 'Польза и&nbsp;вред массажа',
       textPreview: `Ценность массажа колоссальна: он запускает мощные механизмы исцеления без&nbsp;необходимости
-              употреблять таблетки, часто обладающие побочными реакциями. Лечебная процедура...`
+        употреблять таблетки, часто обладающие побочными реакциями. Лечебная процедура...`
     },
     5: {
       id: 5,
@@ -585,28 +589,28 @@
       title: 'Как размять шею в&nbsp;домашних условиях',
       tags: ['Содержит видеоуроки'],
       textPreview: `Головная боль, хроническая усталость, отеки&nbsp;— последствия малоактивного образа жизни
-              и&nbsp;сидячей работы, которая создает напряжение в&nbsp;области шеи...`
+        и&nbsp;сидячей работы, которая создает напряжение в&nbsp;области шеи...`
     },
     7: {
       id: 7,
       url: 'back-massage-for-osteochondrosis.html',
       title: 'Массаж спины при&nbsp;остеохондрозе',
       textPreview: `Динамика распространения остеохондроза отличается нарастающим темпом — дегенеративные изменения
-              все чаще диагностируются у молодых...`
+        все чаще диагностируются у молодых...`
     },
     8: {
       id: 8,
       url: 'massage-with-medical-ointments.html',
       title: 'Массаж с&nbsp;медицинскими мазями',
       textPreview: `Даже без применения дополнительных препаратов массаж является эффектив&shy;ной восстанавливающей
-              процедурой, улучшающей состояние человека...`
+        процедурой, улучшающей состояние человека...`
     },
     9: {
       id: 9,
       url: 'osteochondrosis.html',
       title: 'Остеохондроз',
       textPreview: `Клинические обследования позво&shy;ночника (рентген, МРТ, КТ), которые периодически проходит
-              каждый пациент, эффективно выявляют все болезненные...`
+        каждый пациент, эффективно выявляют все болезненные...`
     },
     10: {
       id: 10,
@@ -614,6 +618,6 @@
       tags: ['Содержит видеоуроки'],
       title: 'Как правильно делать массаж спины в&nbsp;дома&shy;шних условиях',
       textPreview: `Дефицит свободного времени и уста&shy;лость в конце рабочего дня&nbsp;— главные причины, почему
-              визит к&nbsp;массажисту... `
+        визит к&nbsp;массажисту... `
     }
   }
